--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-html {
-  font-size: 20px;
-  font-family: 'Open Sans', sans-serif;
-}
-
-
 h1 {
   font-size: 60px;
   text-align: center;
@@ -26,16 +20,11 @@ p, li {
   letter-spacing: 1px;
 }
 
-
-html {
-  background-color: #ddc0fa;
-}
-
 body {
   width: 1500px;
   margin: 0 auto;
   background-color: #faf9e3;
-  padding: 0 20px 20px 20px;
+  padding: 0 20px 20px;
   border: 5px solid black;
 }
 
